<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group
        android:checkableBehavior="single"
        >

        <!--OPCION INICIO-->
           <item
            android:id="@+id/InicioAdmin"
            android:title="@string/InicioAdmin"
               android:icon="@drawable/casa"

            />
        <!--OPCION PERFIL-->
        <item
            android:id="@+id/PerfilAdmin"
            android:title="@string/PerfilAdmin"
            android:icon="@drawable/admini"
            />
        <!--OPCION REGISTRAR-->
        <item
            android:id="@+id/RegistrarAdmin"
            android:title="@string/RegistrarAdmin"
            android:icon="@drawable/cohete"
            
            />

        <!--OPCION ADMINISTRADORES-->

        <item
            android:id="@+id/ListarAdmin"
            android:title="@string/ListarAdmin"
            android:icon="@drawable/grup_blan"
            />

        <!--OPCION CERRAR SESION-->
        <item
            android:id="@+id/SalirAdmin"
            android:title="@string/SalirAdmin"
            android:icon="@drawable/close_blan"
            />



    </group>

</menu>